# lazy-flask

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README_zh.md
example/: app.py  req.py
lazy_flask/: __init__.py
lazy_flask.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lazy_flask/: __init__.py  app.py
tests/: test_function.py  test_request_validation.py
